fixing css and adding more divs to grid to match up 100% width with no spillage

--- a/client/src/App/Styles/styles.css
+++ b/client/src/App/Styles/styles.css
@@ -2,20 +2,36 @@
 
 .App {
   display: grid;
-  grid-template-columns: 1fr;
+  /* grid-template-columns: 1fr; */
   grid-template-rows: auto, repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+
+  grid-template-columns: minmax(200px, 1fr);
+  max-width: 100%;
 }
+/* .App {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 95%;
+  height: 100%;
+  transform: translate( -50%, -50% );
+} */
 
 /* the whole app layout  */
 
 /* ///////////// */
 
 /* WHOLE APP */
-/* WHOLE APP *//* WHOLE APP *//* WHOLE APP *//* WHOLE APP *//* WHOLE APP */
+/* WHOLE APP */
+/* WHOLE APP */
+/* WHOLE APP */
+/* WHOLE APP */
 .HeaderContainer {
   grid-area: 1 / 1 / 2 / 2;
+  display: inline-block;
 }
 .ProductOverviewContainer {
   grid-area: 2 / 1 / 3 / 2;
@@ -34,8 +50,6 @@
 }
 /* WHOLE APP */
 
-/* WHOLE APP *//* WHOLE APP *//* WHOLE APP *//* WHOLE APP *//* WHOLE APP */
-
 /* Header */
 
 /* .HeaderContainer {
@@ -51,13 +65,44 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(9, 1fr);
-  grid-column-gap: 7px;
+  grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
+/* MainImageGalleryContainer PARENT ///////////////*/
 
 .MainImageGalleryContainer {
   grid-area: 1 / 1 / 8 / 2;
 }
+.MainImageGalleryContainer {
+  max-width: 100%;
+
+  display: grid;
+  grid-template-columns: 3fr 2fr 11fr 2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+.thumbnail_url_container {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.LeftArrow {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.MainImg {
+  grid-area: 1 / 3 / 2 / 4;
+
+  /* padding-left: 8%;
+  padding-right: 8%; */
+}
+.ExpandButton {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.RightArrow {
+  grid-area: 1 / 5 / 2 / 6;
+}
+
+/* MainImageGalleryContainer PARENT ///////////////*/
+
 .div2 {
   grid-area: 1 / 2 / 2 / 3;
 }
@@ -81,15 +126,11 @@
 }
 
 .MainThumbNails {
-  width: 80px;
-  height: 80px;
+  /* width: 80px;
+  height: 80px; */
 }
 
 .MainGalleryThumbNail {
-  width: 100px;
-  height: 100px;
 }
 
 /* Product overview main compoent*/
-
-
